--- a/tcc.tex
+++ b/tcc.tex
@@ -1,4 +1,4 @@
-\documentclass{iiufrgs}
+\documentclass[openright, oneside]{iiufrgs}
 \usepackage[latin1]{inputenc}
 \usepackage{graphicx}
 \usepackage[section]{placeins}
